многочисленные исправления возможных уязвимостей